{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 8,
  "lineage": "8851ddd2-7627-b2d0-3e80-031cbc3a6c43",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052355af2a014bd2c",
            "arn": "arn:aws:ec2:us-east-1:140547087334:instance/i-022090f26023fff78",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022090f26023fff78",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dampscodekp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-046b558b5ef18d10e"
              }
            ],
            "primary_network_interface_id": "eni-046b558b5ef18d10e",
            "private_dns": "ip-10-0-1-113.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.113",
            "public_dns": "ec2-98-80-202-164.compute-1.amazonaws.com",
            "public_ip": "98.80.202.164",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04e7607072008a730",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f50dd043083583bd",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-ec2",
              "Project": "bloomy-final-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-ec2",
              "Project": "bloomy-final-project"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f86910009785614"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140547087334",
            "id": "i-022090f26023fff78",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140547087334:internet-gateway/igw-0fe5ab64e6e445d3f",
            "id": "igw-0fe5ab64e6e445d3f",
            "owner_id": "140547087334",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-igw",
              "Project": "bloomy-final-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-igw",
              "Project": "bloomy-final-project"
            },
            "vpc_id": "vpc-0160d7d7c0102dd28"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140547087334",
            "id": "igw-0fe5ab64e6e445d3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140547087334:route-table/rtb-046a321ad014af766",
            "id": "rtb-046a321ad014af766",
            "owner_id": "140547087334",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe5ab64e6e445d3f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-public-rt",
              "Project": "bloomy-final-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-public-rt",
              "Project": "bloomy-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0160d7d7c0102dd28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140547087334",
            "id": "rtb-046a321ad014af766",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cbbba5823687cbf",
            "region": "us-east-1",
            "route_table_id": "rtb-046a321ad014af766",
            "subnet_id": "subnet-0f50dd043083583bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140547087334",
            "id": "rtbassoc-02cbbba5823687cbf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140547087334:security-group/sg-06f86910009785614",
            "description": "Security group for web applications",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f86910009785614",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Flask",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Tomcat",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "bloomy-final-project-sg",
            "name_prefix": "",
            "owner_id": "140547087334",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-sg",
              "Project": "bloomy-final-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-sg",
              "Project": "bloomy-final-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0160d7d7c0102dd28"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140547087334",
            "id": "sg-06f86910009785614",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140547087334:subnet/subnet-0f50dd043083583bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f50dd043083583bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "140547087334",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-public-subnet",
              "Project": "bloomy-final-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-public-subnet",
              "Project": "bloomy-final-project"
            },
            "vpc_id": "vpc-0160d7d7c0102dd28"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140547087334",
            "id": "subnet-0f50dd043083583bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:140547087334:vpc/vpc-0160d7d7c0102dd28",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea6bfbcf32ea9bba",
            "default_route_table_id": "rtb-0576d56d119cde40d",
            "default_security_group_id": "sg-04d7b73b474d48fb0",
            "dhcp_options_id": "dopt-0cb13c6fda2b85c2b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0160d7d7c0102dd28",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0576d56d119cde40d",
            "owner_id": "140547087334",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-vpc",
              "Project": "bloomy-final-project"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "bloomy-final-project-vpc",
              "Project": "bloomy-final-project"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "140547087334",
            "id": "vpc-0160d7d7c0102dd28",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}